提交本地学习代码

--- a/BackBone/Backbone-serverTest/views/backbone/collections.ejs
+++ b/BackBone/Backbone-serverTest/views/backbone/collections.ejs
@@ -51,6 +51,16 @@
     			},
     		});
 
+            var NewBooks =Backbone.Collection.extend({
+                model:Book,
+                url:"http://localhost:3000/backbone/bookshelf"
+            });
+
+            var books =new NewBooks();
+
+            var onebook =books.create({
+                title:"I'm coming"
+            });
 
     		// bookShelf.add(book1);
     		// bookShelf.add(book2);
